# license-scanner

./: .eslintignore  .eslintrc.cjs  .gitignore  .mocharc.json  .npmignore  .prettierignore  .rustfmt.toml  .yarnrc.yml  README.md  loader.cjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml  github-issue-sync.yml  publish.yml
example/: README.md  detection-overrides.json  start-lines-excludes.txt
license-scanner/: constants.ts  crate.ts  db.ts  license.ts  logger.ts  main.ts  repository.ts  scanner.ts  synchronization.ts  types.ts  utils.ts
license-scanner/cli/: dump.ts  scan.ts
licenses/: CC-BY-SA-4.0
rust-crate-scanner/: Cargo.toml  main.rs
tests/: scanner.test.ts  utils.test.ts
tests/targets/crate-with-dependencies/: Cargo.toml
tests/targets/crate-with-dependencies/src/: main.rs
tests/targets/inherited-properties/: Cargo.toml
tests/targets/inherited-properties/subpackage-inherited/: Cargo.toml
tests/targets/inherited-properties/subpackage-set/: Cargo.toml
tests/targets/manifest-license/: Cargo.toml  build.rs
tests/targets/multiple-crates/first-crate/: Cargo.toml
tests/targets/multiple-crates/first-crate/src/: main.rs
tests/targets/multiple-crates/second-crate/: Cargo.toml
tests/targets/multiple-crates/second-crate/src/: main.rs
tests/targets/required-license/: Cargo.toml
tests/targets/required-license/src/copyrighted/: main.rs
tests/targets/required-license/src/licensed-differently/: main.rs
tests/targets/single-crate/: Cargo.toml
tests/targets/single-crate/src/: unlicensed.rs
